# juce-plugin-dev

./: CMakeLists.txt  Plugin.cpp
dev/Tools/: GridStringInterpreter.h
modules/: CmakeLists.txt
modules/juce_extensions/: juce_extensions.cpp  juce_extensions.h
modules/juce_extensions/gui/: CanvasComponent.cpp  CanvasComponent.h
modules/juce_extensions/plugin/: AudioProcessor.cpp  AudioProcessor.h  AudioProcessorEditor.cpp  AudioProcessorEditor.h  PluginEditorComponent.cpp  PluginEditorComponent.h  ScaledDocumentWindow.cpp  ScaledDocumentWindow.h
modules/juce_extensions/tools/: Timer.cpp  Timer.h
